# trend-radar

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVAL.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  test.yml
tests/: test_cache.py  test_cli.py  test_cli_v050.py  test_config.py  test_core.py  test_csv_export.py  test_html_export.py  test_integration.py  test_models.py  test_producthunt.py  test_render.py  test_shell.py  test_sources.py  test_sources_individual.py  test_store.py  test_v050_features.py  test_v060_features.py  test_v070_features.py  test_v080_features.py  test_v090_features.py  test_v100_features.py  test_web.py  test_web_v050.py
trend_radar/: __init__.py  alerts.py  async_fetch.py  bookmarks.py  cache.py  cli.py  config.py  core.py  dedup.py  demo.py  digest.py  doctor.py  init_wizard.py  live.py  models.py  momentum.py  normalization.py  obsidian_export.py  opml.py  plugins.py  radar_chart.py  rate_limiter.py  render.py  retry.py  shell.py  snapshots.py  store.py  themes.py  timeline.py  web.py  webhooks.py
trend_radar/exporters/: __init__.py  csv_export.py  html.py
trend_radar/hermes_tool/: __init__.py
trend_radar/sources/: __init__.py  arxiv.py  github.py  hackernews.py  producthunt.py  reddit.py  rss.py
